[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_top = 1.0
margin_right = 387.0
margin_bottom = 217.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="HostRect" type="ColorRect" parent="Panel"]
margin_left = 29.0
margin_top = 27.0
margin_right = 362.0
margin_bottom = 100.0
color = Color( 0.286275, 0.286275, 0.286275, 1 )

[node name="Label0" type="Label" parent="Panel/HostRect"]
margin_left = 15.0
margin_top = 30.0
margin_right = 95.0
margin_bottom = 44.0
text = "Host a game"

[node name="HostButton" type="Button" parent="Panel/HostRect"]
margin_left = 272.0
margin_top = 28.0
margin_right = 319.0
margin_bottom = 48.0
text = "Host"

[node name="JoinRect" type="ColorRect" parent="Panel"]
margin_left = 31.0
margin_top = 124.0
margin_right = 359.0
margin_bottom = 198.0
color = Color( 0.286275, 0.286275, 0.286275, 1 )

[node name="Label1" type="Label" parent="Panel/JoinRect"]
margin_left = 8.0
margin_top = 7.0
margin_right = 143.0
margin_bottom = 21.0
text = "Join an existing game"

[node name="Label2" type="Label" parent="Panel/JoinRect"]
margin_left = 8.0
margin_top = 37.0
margin_right = 126.0
margin_bottom = 51.0
text = "Servers IP address"

[node name="IPAddress" type="TextEdit" parent="Panel/JoinRect"]
margin_left = 133.0
margin_top = 32.0
margin_right = 257.0
margin_bottom = 58.0
text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="Panel/JoinRect"]
margin_left = 267.0
margin_top = 33.0
margin_right = 314.0
margin_bottom = 53.0
text = "Join"

[connection signal="pressed" from="Panel/HostRect/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Panel/JoinRect/JoinButton" to="." method="_on_JoinButton_pressed"]
